# Pico-ESP32

./: CMakeLists.txt  Makefile  README.md  example_test.py
app/inc/: oled.h
app/src/: oled.c
hal/inc/: iic.h  main.h  oled.h  uart.h
hal/src/: iic.c  oled.c  uart.c
main/: CMakeLists.txt  ESP32SX.c  ESP32X_Demo.c  main.h
